--- a/front/planning-poker/angular.json
+++ b/front/planning-poker/angular.json
@@ -90,6 +90,9 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
+            ],
+            "polyfills": [
+              "src/polyfills.ts"
             ]
           }
         }
