--- a/front/planning-poker/package.json
+++ b/front/planning-poker/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.3",
+    "@stomp/stompjs": "^7.1.1",
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
     "papaparse": "^5.5.3",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
   },
@@ -35,6 +37,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "@types/papaparse": "^5.3.16",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
