--- a/front/planning-poker/angular.json
+++ b/front/planning-poker/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
+            "sourceMap": true,
             "inlineStyleLanguage": "scss",
             "assets": [
                 "src/assets",
